[gd_scene load_steps=3 format=3 uid="uid://c4y33hfvqujok"]

[ext_resource type="Script" uid="uid://bs21up82jkngi" path="res://shared ui elements/ability summary/ability_summary.gd" id="1_t7ok4"]
[ext_resource type="PackedScene" uid="uid://c2is5hi4k3ag8" path="res://shared ui elements/modal.tscn" id="2_06heh"]

[node name="AbilitySummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_t7ok4")

[node name="Modal" parent="." instance=ExtResource("2_06heh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
offset_left = -300.0
offset_right = 300.0

[node name="NameLabel" type="Label" parent="Modal/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"

[node name="TextureRect" parent="Modal/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
visible = false

[node name="DiceContainer" type="HBoxContainer" parent="Modal/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[connection signal="cancel_pressed" from="Modal" to="." method="_on_cancel_button_pressed"]
[connection signal="ok_pressed" from="Modal" to="." method="_on_modal_ok_pressed"]

[editable path="Modal"]
